// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FileUploadComponent Snapshot Tests should match snapshot - idle state 1`] = `
<View
  accessibilityState={
    {
      "busy": undefined,
      "checked": undefined,
      "disabled": undefined,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={true}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    {
      "borderColor": "#2632381A",
      "borderWidth": 1,
      "marginTop": 20,
      "opacity": 1,
      "padding": 8,
    }
  }
>
  <View
    alignItems="center"
    gap={8}
    row={true}
  >
    <View
      testID="svg-icon-file-add"
    >
      <Text>
        file-add
      </Text>
    </View>
    <View
      justify="space-between"
    >
      <Text
        color="#333333"
        medium={true}
        size={14}
      >
        Upload Document
      </Text>
      <Text
        color="#666666"
        numberOfLines={1}
        size={12}
      >
        Upload
      </Text>
    </View>
  </View>
  <View
    testID="svg-icon-upload"
  >
    <Text>
      upload
    </Text>
  </View>
</View>
`;

exports[`FileUploadComponent Snapshot Tests should match snapshot - with file selected 1`] = `
<View
  accessibilityState={
    {
      "busy": undefined,
      "checked": undefined,
      "disabled": undefined,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={true}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    {
      "borderColor": "#2632381A",
      "borderWidth": 1,
      "marginTop": 20,
      "opacity": 1,
      "padding": 8,
    }
  }
>
  <View
    alignItems="center"
    gap={8}
    row={true}
  >
    <View
      testID="svg-icon-file-add"
    >
      <Text>
        file-add
      </Text>
    </View>
    <View
      justify="space-between"
    >
      <Text
        color="#333333"
        medium={true}
        size={14}
      >
        Upload Document
      </Text>
      <Text
        color="#666666"
        numberOfLines={1}
        size={12}
      >
        document.pdf
      </Text>
    </View>
  </View>
  <View
    testID="svg-icon-upload"
  >
    <Text>
      upload
    </Text>
  </View>
</View>
`;
